Layout básico e scroll bar

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,12 +13,219 @@
 
 
 <body>
+
+    <div class="topo">
+        <h1>DrivenEats</h1>
+        <h3>Sua comida em 6 minutos</h3>
+    </div>
+
+    <div class="prato-principal">
+
+        <div class="titulo-div">
+
+            <h2>Primeiro, seu prato</h2>
+
+            <div class="lista-pratos">
+
+                <div class="pratos">
+
+                    <img src="/img/frango_yin_yang 1.svg" alt="frango_yin_yang">
+                    <h2 class="nome-prato">Frango Yin Yang</h2>
+                    <p>Um pouco de batata,
+                        Um pouco de salada
+                    </p>
+                    <h2 class="preço">R$ 14,90</h2>
+
+                </div>
+
+                <div class="pratos">
+
+                    <img src="/img/frango_yin_yang 1.svg" alt="frango_yin_yang">
+                    <h2 class="nome-prato">Frango Yin Yang</h2>
+                    <p>Um pouco de batata,
+                        Um pouco de salada
+                    </p>
+                    <h2 class="preço">R$ 14,90</h2>
+
+                </div>
+
+                <div class="pratos">
+
+                    <img src="/img/frango_yin_yang 1.svg" alt="frango_yin_yang">
+                    <h2 class="nome-prato">Frango Yin Yang</h2>
+                    <p>Um pouco de batata,
+                        Um pouco de salada
+                    </p>
+                    <h2 class="preço">R$ 14,90</h2>
+
+                </div>
+
+                <div class="pratos">
+
+                    <img src="/img/frango_yin_yang 1.svg" alt="frango_yin_yang">
+                    <h2 class="nome-prato">Frango Yin Yang</h2>
+                    <p>Um pouco de batata,
+                        Um pouco de salada
+                    </p>
+                    <h2 class="preço">R$ 14,90</h2>
+
+                </div>
+
+                <div class="pratos">
+
+                    <img src="/img/frango_yin_yang 1.svg" alt="frango_yin_yang">
+                    <h2 class="nome-prato">Frango Yin Yang</h2>
+                    <p>Um pouco de batata,
+                        Um pouco de salada
+                    </p>
+                    <h2 class="preço">R$ 14,90</h2>
+
+                </div>
+
+                <div class="pratos">
+
+                    <img src="/img/frango_yin_yang 1.svg" alt="frango_yin_yang">
+                    <h2 class="nome-prato">Frango Yin Yang</h2>
+                    <p>Um pouco de batata,
+                        Um pouco de salada
+                    </p>
+                    <h2 class="preço">R$ 14,90</h2>
+
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+
+
+
     
+    <div class="bebidas">
+
+        <div class="titulo-div">
+
+            <h2>Agora, sua bebida</h2>
+
+            <div class="lista-pratos">
+
+                <div class="pratos">
+
+                    <img src="/img/coquinha_gelada 1.svg" alt="coquinha_gelada">
+                    <h2 class="nome-prato">Coquinha gelada</h2>
+                    <p>Lata 350ml
+                    </p>
+                    <h2 class="preço">R$ 4,90</h2>
+
+                </div>
+
+                <div class="pratos">
+
+                    <img src="/img/coquinha_gelada 1.svg" alt="coquinha_gelada">
+                    <h2 class="nome-prato">Coquinha gelada</h2>
+                    <p>Lata 350ml
+                    </p>
+                    <h2 class="preço">R$ 4,90</h2>
+
+                </div>
+
+                <div class="pratos">
+
+                    <img src="/img/coquinha_gelada 1.svg" alt="coquinha_gelada">
+                    <h2 class="nome-prato">Coquinha gelada</h2>
+                    <p>Lata 350ml
+                    </p>
+                    <h2 class="preço">R$ 4,90</h2>
+
+                </div>
+
+                <div class="pratos">
+
+                    <img src="/img/coquinha_gelada 1.svg" alt="coquinha_gelada">
+                    <h2 class="nome-prato">Coquinha gelada</h2>
+                    <p>Lata 350ml
+                    </p>
+                    <h2 class="preço">R$ 4,90</h2>
+
+                </div>
+
+                <div class="pratos">
+
+                    <img src="/img/coquinha_gelada 1.svg" alt="coquinha_gelada">
+                    <h2 class="nome-prato">Coquinha gelada</h2>
+                    <p>Lata 350ml
+                    </p>
+                    <h2 class="preço">R$ 4,90</h2>
+
+                </div>
+
+
+            </div>
+
+        </div>
+    </div>
 
 
 
+    <div class="prato-principal">
 
+        <div class="titulo-div">
 
-<script src="/script.js"></script>
+            <h2>Por fim, sua sobremesa</h2>
+
+            <div class="lista-pratos">
+
+                <div class="pratos">
+
+                    <img src="/img/pudim 1.svg" alt="pudim">
+                    <h2 class="nome-prato">Pudim</h2>
+                    <p>Apenas pudim
+                    </p>
+                    <h2 class="preço">R$ 7,90</h2>
+
+                </div>
+
+                <div class="pratos">
+
+                    <img src="/img/pudim 1.svg" alt="pudim">
+                    <h2 class="nome-prato">Pudim</h2>
+                    <p>Apenas pudim
+                    </p>
+                    <h2 class="preço">R$ 7,90</h2>
+
+                </div>
+
+                <div class="pratos">
+
+                    <img src="/img/pudim 1.svg" alt="pudim">
+                    <h2 class="nome-prato">Pudim</h2>
+                    <p>Apenas pudim
+                    </p>
+                    <h2 class="preço">R$ 7,90</h2>
+
+                </div>
+
+                <div class="pratos">
+
+                    <img src="/img/pudim 1.svg" alt="pudim">
+                    <h2 class="nome-prato">Pudim</h2>
+                    <p>Apenas pudim
+                    </p>
+                    <h2 class="preço">R$ 7,90</h2>
+
+                </div>
+                
+
+            </div>
+
+        </div>
+    </div>
+
+    <div class="barra-bottom">
+        <button></button>
+    </div>
+
+    <script src="/script.js"></script>
 </body>
+
 </html>
