três seleçoes, uma em cada linha

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <form>
                 <div class="lista-pratos">
 
-                    <div class="pratos" onclick="escolherPrato (this)">
+                    <div class="pratos" onclick="pratoPrincipal (this)">
 
                         <img src="/img/frango_yin_yang 1.svg" alt="frango_yin_yang">
                         <h2 class="nome-prato">Frango Yin Yang</h2>
@@ -38,7 +38,7 @@
                         
                     </div>
 
-                    <div class="pratos" onclick="escolherPrato (this)">
+                    <div class="pratos" onclick="pratoPrincipal (this)">
 
                         <img src="/img/frango_yin_yang 1.svg" alt="frango_yin_yang">
                         <h2 class="nome-prato">Frango Yin Yang</h2>
@@ -49,7 +49,7 @@
                         
                     </div>
 
-                    <div class="pratos" onclick="escolherPrato (this)">
+                    <div class="pratos" onclick="pratoPrincipal (this)">
 
                         <img src="/img/frango_yin_yang 1.svg" alt="frango_yin_yang">
                         <h2 class="nome-prato">Frango Yin Yang</h2>
@@ -78,7 +78,7 @@
 
             <div class="lista-pratos">
 
-                <div class="pratos" onclick="escolherPrato (this)">
+                <div class="pratos" onclick="bebida (this)">
 
                     <img src="/img/coquinha_gelada 1.svg" alt="coquinha_gelada">
                     <h2 class="nome-prato">Coquinha gelada</h2>
@@ -90,7 +90,7 @@
                     </div>
                 </div>
 
-                <div class="pratos" onclick="escolherPrato (this)">
+                <div class="pratos" onclick="bebida (this)">
 
                     <img src="/img/coquinha_gelada 1.svg" alt="coquinha_gelada">
                     <h2 class="nome-prato">Coquinha gelada</h2>
@@ -102,7 +102,7 @@
                     </div>
                 </div>
 
-                <div class="pratos" onclick="escolherPrato (this)">
+                <div class="pratos" onclick="bebida (this)">
 
                     <img src="/img/coquinha_gelada 1.svg" alt="coquinha_gelada">
                     <h2 class="nome-prato">Coquinha gelada</h2>
@@ -134,7 +134,7 @@
 
             <div class="lista-pratos">
 
-                <div class="pratos" onclick="escolherPrato (this)">
+                <div class="pratos" onclick="sobremesa (this)">
 
                     <img src="/img/pudim 1.svg" alt="pudim">
                     <h2 class="nome-prato">Pudim</h2>
@@ -144,7 +144,7 @@
 
                 </div>
 
-                <div class="pratos" onclick="escolherPrato (this)">
+                <div class="pratos" onclick="sobremesa (this)">
 
                     <img src="/img/pudim 1.svg" alt="pudim">
                     <h2 class="nome-prato">Pudim</h2>
@@ -154,7 +154,7 @@
 
                 </div>
 
-                <div class="pratos" onclick="escolherPrato (this)">
+                <div class="pratos" onclick="sobremesa (this)">
 
                     <img src="/img/pudim 1.svg" alt="pudim">
                     <h2 class="nome-prato">Pudim</h2>
@@ -164,7 +164,7 @@
 
                 </div>
 
-                <div class="pratos" onclick="escolherPrato (this)">
+                <div class="pratos" onclick="sobremesa (this)">
 
                     <img src="/img/pudim 1.svg" alt="pudim">
                     <h2 class="nome-prato">Pudim</h2>
