--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <h2>Primeiro, seu prato</h2>
             <form>
-                <div class="lista-pratos yinyang">
+                <div class="lista-pratos pricipal">
 
                     <div class="pratos" onclick="escolherPrato (this)">
 
